// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Overriding templates > should use an override template if one exists 1`] = `
"# This is an override template
Example ADR
1992-01-12
2
Accepted"
`;

exports[`Overriding templates > should use an override template if one exists 2`] = `
"# This is an override template
Another Example ADR
1992-01-12
3
Accepted"
`;
